kubernetes/overlays/arz.berlin/client-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: archive
spec:
  tls:
  - hosts:
    - archive.arz.berlin
  rules:
  - host: archive.arz.berlin
