kubernetes/overlays/arz.berlin/server-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: archive
spec:
  tls:
  - hosts:
    - archive.arz.berlin
    secretName: archive-tls
  rules:
  - host: archive.arz.berlin
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 80
